Prevent overlapping of the buttons for certain devices.

--- a/APPS/Settings/settings.css
+++ b/APPS/Settings/settings.css
@@ -95,6 +95,7 @@ div {
   text-decoration: none;
   color: white;
   transition-duration: 0.2s;
+  display: inline-block;
 }
 
 .button:hover {
